tweaked request description notes

--- a/_includes/script-examples/signal-endpoint/create-signal/local/request-description.html
+++ b/_includes/script-examples/signal-endpoint/create-signal/local/request-description.html
@@ -74,7 +74,7 @@
         <span class="type">boolean</span>
         <span class="example">false</span>
         <p class="description">Indicates if the Signal has been archived </p>
-        <p class="note">This attribute is ignored when used with the local API</p>
+        <p class="note">Ignored when using localhost</p>
       </td>
     </tr>
 
@@ -84,7 +84,7 @@
         <span class="type">boolean</span>
         <span class="example">false</span>
         <p class="description">Indicates if the Signal has been read</p>
-        <p class="note">This attribute is ignored when used with the local API</p>
+        <p class="note">Ignored when using localhost</p>
       </td>
     </tr>
 
