changed description of signal id field

--- a/_includes/script-examples/signal-endpoint/ressource-description.html
+++ b/_includes/script-examples/signal-endpoint/ressource-description.html
@@ -12,7 +12,9 @@
       <td>
         <span class="type">integer</span>
         <span class="example">1</span>
-        <p class="description read-only">Globally unique ID of the signal.</p>
+        <p class="description read-only">Unique ID of the signal</p>
+        <p class="note text-muted" >Signals created via localhost have negative ids</p>
+
       </td>
     </tr>
 
