removed text-align center from flash notice

--- a/_includes/flash_notice.html
+++ b/_includes/flash_notice.html
@@ -1,6 +1,6 @@
 <!-- flash notice to pop up messages to user -->
 <div class="alert alert-dismissible fade show"
-  style="display: none; text-align: center;"
+  style="display: none;"
   id="flash-notice-section">
   <div id="flash-notice-message">
     <strong>Holy guacamole!</strong> You should check in on some of those fields below.
