tweaked anchor class to add margin

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,11 +39,11 @@
       <ul class="collapse" id="signal-ressource-collapse-content">
         <li>
           <span class="badge badge-warning">RESSOURCE</span>&nbsp;
-          <a href="#signal-ressource-anchor">signals</a>
+          <a href="/q-api-doc#signal-ressource-anchor">signals</a>
         </li>
         <li>
           <span class="badge badge-success">POST</span>&nbsp;
-          <a href="#create-signal-anchor">create signal</a>
+          <a href="/q-api-doc#create-signal-anchor">create signal</a>
         </li>
       </ul>
     </li>
