switched the http call badges to the right of the endpoint links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,9 @@
   </ul>
 
   <li class="sidebar-title">Q API</li>
-  <ul class="sidebar-items">
+
+  <!-- collapsing link example -->
+  <!-- <ul class="sidebar-items">
     <li>
       <a class="collapsing-link collapsed"
          data-toggle="collapse" 
@@ -47,5 +49,22 @@
         </li>
       </ul>
     </li>
+  </ul> -->
+
+  <ul class="sidebar-items">
+    <li>
+         <span class="ressource-name">Signals</span>
+      <ul>
+        <li>
+          <a href="/q-api-doc#signal-ressource-anchor">signals</a>
+          <span class="badge badge-warning pull-right">RESSOURCE</span>
+        </li>
+        <li>
+          <a href="/q-api-doc#create-signal-anchor">create signal</a>
+          <span class="badge badge-success pull-right">POST</span>
+        </li>
+      </ul>
+    </li>
   </ul>
+  
 </ul>
