fixed background color of active cloud or localhost tab links

--- a/_sass/_code_tabs.scss
+++ b/_sass/_code_tabs.scss
@@ -73,5 +73,20 @@ $tab-accent-color: $brand-color;
   background-color: $brand-color;
 }
 
+.cloud-or-local-nav a:hover{
+  background-color: transparent !important;
+}
+
+.cloud-or-local-nav a.active {
+  background-color: transparent !important;
+}
+
+.code-nav-tabs + .tab-content {
+  background-color: #f5f2f0;
+}
+
+  
+
+
 
 // end of css for the cloud or local collapsing tabs
