--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -56,8 +56,8 @@
          <span class="ressource-name">Signals</span>
       <ul>
         <li>
-          <a href="/q-api-doc#signal-ressource-anchor">signals</a>
-          <span class="badge badge-warning pull-right">RESSOURCE</span>
+          <a href="/q-api-doc#signal-ressource-anchor">signal ressource</a>
+          <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
           <a href="/q-api-doc#create-signal-anchor">create signal</a>
