added margin bottom to param description table

--- a/_includes/script-examples/signal-ressource/create-signal/request-description.html
+++ b/_includes/script-examples/signal-ressource/create-signal/request-description.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered request-body-table">
+<table class="table table-bordered request-body-table mb-5">
   <thead>
     <tr>
       <th scope="col">Parameter</th>
