--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
   <header class="post-header">
       <div class="btn-group contribute" role="group">
          <a href="https://github.com/DasKeyboard/Daskeyboard.io/blob/master/{{page.path}}" class="btn btn-sm">
-            <i class="fa fa-pencil"></i> Edit Source
+            <i class="fa fa-pencil"></i> Edit Page
          </a>
          <a href="https://github.com/DasKeyboard/q/issues/new?title=Issue from website page {{page.title}}&body=From URL: {{site.url}}/{{page.path}}&labels=dev: docs - website" class="btn btn-sm">
             <i class="fa fa-github"></i> File Issue
