--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -43,7 +43,7 @@
                 <header class="post-header">
                     <div class="btn-group contribute" role="group">
                        <a href="https://github.com/DasKeyboard/Daskeyboard.io/blob/master/{{page.path}}" class="btn btn-sm">
-                          <i class="fa fa-pencil"></i> Edit Source
+                          <i class="fa fa-pencil"></i> Edit Page
                        </a>
                        <a href="https://github.com/DasKeyboard/Daskeyboard.io/issues/new?title=Issue from website page {{page.title}}&body=From URL: {{site.url}}/{{page.path}}&labels=dev: docs - website" class="btn btn-sm">
                           <i class="fa fa-github"></i> File Issue
