added link to zoneId explanation in zoneId signal field

--- a/_includes/script-examples/signal-ressource/ressource-description.html
+++ b/_includes/script-examples/signal-ressource/ressource-description.html
@@ -43,7 +43,8 @@
         <span class="example">'KEY_Q'</span>
         <span class="example">'74'</span>
         <span class="example">'2,2'</span>
-        <p class="description">Specify the id of the zone targeted by the Signal TODO add link to understanding zoneId</p>
+        <p class="description">Specify the id of the zone targeted by the Signal 
+          <a href="{{ "q-zone-id-explanation"  | relative_url }}">more about zoneId</a></p>
       </td>
     </tr>
 
@@ -63,7 +64,7 @@
       <td>
         <span class="type">string</span>
         <span class="example">'SET_COLOR'</span>
-        <p class="description">Effect of the Signal TODO add link to effect page</p>
+        <p class="description">Effect of the Signal</p>
       </td>
     </tr>
 
@@ -72,7 +73,7 @@
       <td>
         <span class="type">string</span>
         <span class="example">'DK5QPID'</span>
-        <p class="description">Pid of the device targeted by the signal TODO add link to device page</p>
+        <p class="description">Pid of the device targeted by the signal</p>
       </td>
     </tr>
 
