#NEW added delete signal by id documentation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -63,6 +63,10 @@
           <a href="/q-api-doc#create-signal-anchor">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
+        <li>
+          <a href="/q-api-doc#delete-signal-anchor">delete signal by id</a>
+          <span class="badge badge-danger pull-right">DELETE</span>
+        </li>
       </ul>
     </li>
   </ul>
