added more signal api calls

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,6 +67,18 @@
           <a href="/q-api-doc#delete-signal-anchor">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
+        <li>
+          <a href="/q-api-doc#get-shadow-signals-for-device-anchor">get shadows for pid</a>
+          <span class="badge badge-primary pull-right">GET</span>
+        </li>
+        <li>
+          <a href="/q-api-doc#get-all-shadow-signals-anchor">get all shadows</a>
+          <span class="badge badge-primary pull-right">GET</span>
+        </li>
+        <li>
+          <a href="/q-api-doc#get-signal-by-zone-id-anchor">get signal by zoneId</a>
+          <span class="badge badge-primary pull-right">GET</span>
+        </li>
       </ul>
     </li>
   </ul>
