fixed anchors to display the code tabs

--- a/css/main.scss
+++ b/css/main.scss
@@ -97,10 +97,36 @@ aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
     }
 }
 
+
+
+/** ANCHORs POSITION  tweaks */
 .anchor{
     position: relative;
-    top:-100px;
     display: block;
     height: 0;
-    width:0;       
+    width:0;
 }
+
+#create-signal-anchor, #signal-ressource-anchor{
+    top:-100px;      
+}
+
+#delete-signal-anchor {
+    top: -70px;
+}
+
+#get-shadow-signals-for-device-anchor {
+    top: -30px;
+}
+
+
+#get-all-shadow-signals-anchor {
+    top: -30px;
+}
+
+#get-signal-by-zone-id-anchor{
+    top: -30px;
+}
+
+/** END OF ANCHORs POSITION  tweaks */
+
