added get signal color endpoint

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -79,6 +79,10 @@
           <a href="/q-api-doc#get-signal-by-zone-id-anchor">get signal by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
+        <li>
+          <a href="/q-api-doc#get-signal-color-by-zone-id-anchor">get signal color by zoneId</a>
+          <span class="badge badge-primary pull-right">GET</span>
+        </li>
       </ul>
     </li>
   </ul>
