fixed anchor of get signal color by zoneid

--- a/css/main.scss
+++ b/css/main.scss
@@ -124,7 +124,7 @@ aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
     top: -30px;
 }
 
-#get-signal-by-zone-id-anchor{
+#get-signal-by-zone-id-anchor, #get-signal-color-by-zone-id-anchor{
     top: -30px;
 }
 
