--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -83,6 +83,10 @@
           <a href="/q-api-doc#get-signal-color-by-zone-id-anchor">get signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
+        <li>
+          <a href="/q-api-doc#delete-signal-by-zone-id-anchor">delete signal by zoneId</a>
+          <span class="badge badge-danger pull-right">DELETE</span>
+        </li>
       </ul>
     </li>
   </ul>
