--- a/css/main.scss
+++ b/css/main.scss
@@ -124,9 +124,16 @@ aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
     top: -30px;
 }
 
-#get-signal-by-zone-id-anchor, #get-signal-color-by-zone-id-anchor{
+#get-signal-by-zone-id-anchor,
+#get-signal-color-by-zone-id-anchor {
     top: -30px;
 }
+
+#get-signals {
+    top: -30px;
+}
+
+
 
 /** END OF ANCHORs POSITION  tweaks */
 
