added brand name daskeyboard

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -300,7 +300,7 @@ $homepage-illustration-text-break-size: 720px;
             margin-right: 16px;
         }
 
-        .homepage__try_flutter {
+        .homepage__try_daskeyboard {
             .homepage__try_today {
                 font-size: 36px;
                 font-weight: 300;
