--- a/_sass/_customstyles.scss
+++ b/_sass/_customstyles.scss
@@ -107,33 +107,33 @@ caption {
     text-align: left;
 }
 
-table.flutter-table {
+table.daskeyboard-table {
   background-color: transparent;
 }
 
-table.flutter-table th {
+table.daskeyboard-table th {
   text-align: left;
 }
 
-table.flutter-table  {
+table.daskeyboard-table  {
   max-width: 90%;
   margin-bottom: 20px;
   border: 1px solid #dedede;
 }
 
-table.flutter-table  > thead > tr > th,
-table.flutter-table  > tbody > tr > th,
-table.flutter-table  > tfoot > tr > th,
-table.flutter-table  > thead > tr > td,
-table.flutter-table  > tbody > tr > td,
-table.flutter-table  > tfoot > tr > td {
+table.daskeyboard-table  > thead > tr > th,
+table.daskeyboard-table  > tbody > tr > th,
+table.daskeyboard-table  > tfoot > tr > th,
+table.daskeyboard-table  > thead > tr > td,
+table.daskeyboard-table  > tbody > tr > td,
+table.daskeyboard-table  > tfoot > tr > td {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
 
-table.flutter-table  > thead > tr > th {
+table.daskeyboard-table  > thead > tr > th {
   vertical-align: bottom;
   border-bottom: 2px solid #ddd;
   text-transform: none;
@@ -142,42 +142,42 @@ table.flutter-table  > thead > tr > th {
   text-align: left;
 }
 
-table.flutter-table  > caption + thead > tr:first-child > th,
-table.flutter-table  > colgroup + thead > tr:first-child > th,
-table.flutter-table  > thead:first-child > tr:first-child > th,
-table.flutter-table  > caption + thead > tr:first-child > td,
-table.flutter-table  > colgroup + thead > tr:first-child > td,
-table.flutter-table  > thead:first-child > tr:first-child > td {
+table.daskeyboard-table  > caption + thead > tr:first-child > th,
+table.daskeyboard-table  > colgroup + thead > tr:first-child > th,
+table.daskeyboard-table  > thead:first-child > tr:first-child > th,
+table.daskeyboard-table  > caption + thead > tr:first-child > td,
+table.daskeyboard-table  > colgroup + thead > tr:first-child > td,
+table.daskeyboard-table  > thead:first-child > tr:first-child > td {
   border-top: 0;
 }
 
-table.flutter-table  > tbody > tr:nth-of-type(odd) {
+table.daskeyboard-table  > tbody > tr:nth-of-type(odd) {
   background-color: #f9f9f9;
 }
 
-table.flutter-table  col[class*="col-"] {
+table.daskeyboard-table  col[class*="col-"] {
   position: static;
   display: table-column;
   float: none;
 }
 
-table.flutter-table  td[class*="col-"],
-table.flutter-table  th[class*="col-"] {
+table.daskeyboard-table  td[class*="col-"],
+table.daskeyboard-table  th[class*="col-"] {
   position: static;
   display: table-cell;
   float: none;
 }
 
-table.flutter-table  td:first-child {
+table.daskeyboard-table  td:first-child {
   width: 150px;
   /*font-weight: bold;*/
 }
 
-table.flutter-table .boldFirstColumn td:first-child {
+table.daskeyboard-table .boldFirstColumn td:first-child {
   font-weight: bold;
 }
 
-table.flutter-table  tr td {
+table.daskeyboard-table  tr td {
   hyphens: auto;
 }
 
