--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="{{ "js/jquery.min.js" | relative_url }}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="{{ "js/popper.min.js" | relative_url }}"></script>
     <script src="{{ "js/js-bootstrap/bootstrap.min.js"  | relative_url }}"></script>
     <script src="{{ "js/prism.js" | relative_url }}"></script>
     <script src="{{ "js/main.js" | relative_url }}"></script>
