--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,12 +12,12 @@
   <link rel="stylesheet" href="{{ "css/main.css"  | relative_url }}"> 
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro%7CRoboto:500,400italic,300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
   {% for css_name in page.extra_css %}
       <link rel="stylesheet" href="{{ css_name }}">
   {% endfor %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
@@ -29,16 +29,5 @@
       messagingSenderId: "946286108585"
     };
     firebase.initializeApp(config);
-  </script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-67589403-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-
-  <meta name="google-site-verification" content="HFqxhSbf9YA_0rBglNLzDiWnrHiK_w4cqDh2YD2GEY4" />
+  </script> -->
 </head>
