updated signal api endpoints to have a page each ( not everything on the same page)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -56,39 +56,39 @@
          <span class="ressource-name">Signals</span>
       <ul>
         <li>
-          <a href="/q-api-doc#signal-ressource-anchor">signal ressource</a>
+          <a href="/api-ressources/signal/ressource-description">signal ressource</a>
           <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
-          <a href="/q-api-doc#create-signal-anchor">create signal</a>
+          <a href="/api-ressources/signal/create-signal">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
         <li>
-          <a href="/q-api-doc#delete-signal-anchor">delete signal by id</a>
+          <a href="/api-ressources/signal/delete-signal">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="/q-api-doc#get-shadow-signals-for-device-anchor">get shadows for pid</a>
+          <a href="/api-ressources/signal/get-shadow-signals-for-device">get shadows for pid</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/q-api-doc#get-all-shadow-signals-anchor">get all shadows</a>
+          <a href="/api-ressources/signal/get-all-shadow-signals">get all shadows</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/q-api-doc#get-signal-by-zone-id-anchor">get signal by zoneId</a>
+          <a href="/api-ressources/signal/get-signal-by-zone-id">get signal by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/q-api-doc#get-signal-color-by-zone-id-anchor">get signal color by zoneId</a>
+          <a href="/api-ressources/signal/get-signal-color-by-zone-id">get signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/q-api-doc#delete-signal-by-zone-id-anchor">delete signal by zoneId</a>
+          <a href="/api-ressources/signal/delete-signal-by-zone-id">delete signal by zoneId</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="/q-api-doc#get-signals-anchor">get signals</a>
+          <a href="/api-ressources/signal/get-signals">get signals</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
       </ul>
