added margin to code tab

--- a/_sass/_code_tabs.scss
+++ b/_sass/_code_tabs.scss
@@ -57,6 +57,7 @@ $tab-accent-color: $brand-color;
 
 .cloud-or-local-tab-content {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .cloud-or-local-nav{
