--- a/css/main.scss
+++ b/css/main.scss
@@ -96,3 +96,7 @@ aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
         content: none !important;
     }
 }
+
+#quick-start-first-signal {
+    background-color: red;
+}
