modified position of code action tabs

--- a/_sass/_code_tabs.scss
+++ b/_sass/_code_tabs.scss
@@ -12,7 +12,7 @@ $tab-accent-color: $brand-color;
 }
 
 .edit-action {
-  right: 32px !important;
+  right: 77px !important;
 }
 
 .code a:hover {
@@ -63,7 +63,7 @@ $tab-accent-color: $brand-color;
 .cloud-or-local-nav{
   position: absolute;
   top: 50px;
-  right: 135px;
+  left: -20px;
   z-index: 1;
   border: 0px;
 }
