added zoned id explanation page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,7 @@
     <li><a href="{{ "q-api-doc/"  | relative_url }}">Full documentation</a></li>
     <li><a href="{{ "contributed-links/"  | relative_url }}">Community contributions</a></li>
     <li><a href="{{ "script-examples/"  | relative_url }}">API examples &nbsp;<i class="fa fa-star text-primary"></i></a></li>
+    <li><a href="{{ "q-zone-id-explanation"  | relative_url }}">Understand zoneId&nbsp;</a></li>
     <li><a href="https://qforum.daskeyboard.com">Developer forum</a></li>
   </ul>
 
