added q-cloud-or-local page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
   <li class="sidebar-title">Q Developer API</li>
   <ul class="sidebar-items">
     <li><a href="{{ "q-api-quick-start/"  | relative_url }}">Quick start</a></li>
-    <li><a href="{{ "q-api-doc/"  | relative_url }}">Full documentation</a></li>
+    <li><a href="{{ "q-cloud-or-local"  | relative_url }}">Q Cloud or Localhost</a></li>
     <li><a href="{{ "contributed-links/"  | relative_url }}">Community contributions</a></li>
     <li><a href="{{ "script-examples/"  | relative_url }}">API examples &nbsp;<i class="fa fa-star text-primary"></i></a></li>
     <li><a href="{{ "q-zone-id-explanation"  | relative_url }}">Understand zoneId&nbsp;</a></li>
