redirect doc link to quick start

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           </a>
           <div class="trigger">
             <span id="header-welcome-message"></span>
-            <a class="page-link" href="{{ "docs/"  | relative_url }}">Docs</a>
+            <a class="page-link" href="{{ "q-api-quick-start"  | relative_url }}">Docs</a>
             <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
             <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             &nbsp;
