--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,39 +57,39 @@
          <span class="ressource-name">Signals</span>
       <ul>
         <li>
-          <a href="/api-ressources/signal/ressource-description">signal ressource</a>
+          <a href="{{ "api-ressources/signal/ressource-description" | relative_url }}">signal ressource</a>
           <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/create-signal">create signal</a>
+          <a href="{{ "api-ressources/signal/create-signal" | relative_url }}">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/delete-signal">delete signal by id</a>
+          <a href="{{ "api-ressources/signal/delete-signal" | relative_url }}">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/get-shadow-signals-for-device">get shadows for pid</a>
+          <a href="{{ "api-ressources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/get-all-shadow-signals">get all shadows</a>
+          <a href="{{ "api-ressources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/get-signal-by-zone-id">get signal by zoneId</a>
+          <a href="{{ "api-ressources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/get-signal-color-by-zone-id">get signal color by zoneId</a>
+          <a href="{{ "api-ressources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/delete-signal-by-zone-id">delete signal by zoneId</a>
+          <a href="{{ "api-ressources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="/api-ressources/signal/get-signals">get signals</a>
+          <a href="{{ "api-ressources/signal/get-signals" | relative_url }}">get signals</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
       </ul>
