Fixed spelling mistake. Converted ressource to resource

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ small, .small{
         "homepage",
         "responsive_embeds",
         "code_tabs",
-        "ressource_description",
+        "resource_description",
         "json_request_description"
 ;
 
