--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,19 +30,19 @@
     <li>
       <a class="collapsing-link collapsed"
          data-toggle="collapse" 
-         href="#signal-ressource-collapse-content" 
+         href="#signal-resource-collapse-content" 
          role="button" 
          aria-expanded="false" 
-         aria-controls="signal-ressource-collapse-content">
+         aria-controls="signal-resource-collapse-content">
          Signals
          <i class="fa fa-angle-down"></i>
          <i class="fa fa-angle-left"></i>
         </a>
 
-      <ul class="collapse" id="signal-ressource-collapse-content">
+      <ul class="collapse" id="signal-resource-collapse-content">
         <li>
-          <span class="badge badge-warning">RESSOURCE</span>&nbsp;
-          <a href="/q-api-doc#signal-ressource-anchor">signals</a>
+          <span class="badge badge-warning">resource</span>&nbsp;
+          <a href="/q-api-doc#signal-resource-anchor">signals</a>
         </li>
         <li>
           <span class="badge badge-success">POST</span>&nbsp;
@@ -54,42 +54,42 @@
 
   <ul class="sidebar-items">
     <li>
-         <span class="ressource-name">Signals</span>
+         <span class="resource-name">Signals</span>
       <ul>
         <li>
-          <a href="{{ "api-ressources/signal/ressource-description" | relative_url }}">signal ressource</a>
+          <a href="{{ "api-resources/signal/resource-description" | relative_url }}">signal resource</a>
           <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/create-signal" | relative_url }}">create signal</a>
+          <a href="{{ "api-resources/signal/create-signal" | relative_url }}">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/delete-signal" | relative_url }}">delete signal by id</a>
+          <a href="{{ "api-resources/signal/delete-signal" | relative_url }}">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
+          <a href="{{ "api-resources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
+          <a href="{{ "api-resources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
+          <a href="{{ "api-resources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
+          <a href="{{ "api-resources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
+          <a href="{{ "api-resources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ "api-ressources/signal/get-signals" | relative_url }}">get signals</a>
+          <a href="{{ "api-resources/signal/get-signals" | relative_url }}">get signals</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
       </ul>
