--- a/_includes/script-examples/signal-resource/resource-description.html
+++ b/_includes/script-examples/signal-resource/resource-description.html
@@ -64,6 +64,9 @@
       <td>
         <span class="type">string</span>
         <span class="example">'SET_COLOR'</span>
+        <span class="example">'BLINK'</span>
+        <span class="example">'BREATH'</span>
+        <span class="example">'COLOR_CYCLE'</span>
         <p class="description">Effect of the Signal</p>
       </td>
     </tr>
