added profile settings video tutorial page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,9 @@
   <ul class="sidebar-items">
     <li><a href="{{ "get-started/download/"  | relative_url }}">1: Download</a></li>
     <li><a href="{{ "get-started/welcome-video/"  | relative_url }}">2: Watch Welcome video</a></li>
-    <li><a href="{{ "get-started/ifttt-tutorial/"  | relative_url }}">3: Watch IFTTT tutorial</a></li>
-    <li><a href="{{ "get-started/zapier-tutorial/"  | relative_url }}">4: Watch Zapier tutorial</a></li>
+    <li><a href="{{ "get-started/creating-and-switching-profiles-tutorial/"  | relative_url }}">3: Watch profile settings video</a></li>
+    <li><a href="{{ "get-started/ifttt-tutorial/"  | relative_url }}">4: Watch IFTTT tutorial</a></li>
+    <li><a href="{{ "get-started/zapier-tutorial/"  | relative_url }}">5: Watch Zapier tutorial</a></li>
   </ul>
 
   <li class="sidebar-title">Q Developer API</li>
