Added command center info.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,8 @@
     <li><a href="{{ "get-started/creating-and-switching-profiles-tutorial/"  | relative_url }}">3: Watch profile settings video</a></li>
     <li><a href="{{ "get-started/ifttt-tutorial/"  | relative_url }}">4: Watch IFTTT tutorial</a></li>
     <li><a href="{{ "get-started/zapier-tutorial/"  | relative_url }}">5: Watch Zapier tutorial</a></li>
+    <li><a href="{{ "get-started/q-command-center/"  | relative_url }}">6: Control IOT with Q Command Center</a></li>
+
   </ul>
 
   <li class="sidebar-title">Q Developer API</li>
