added sidebar link to firmware changelog

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,9 @@
 
   <li class="sidebar-title">Q software updates</li>
   <ul class="sidebar-items">
-    <li><a href="{{ "updates/changelog"  | relative_url }}">Changelog</a></li>
+    <li><a href="{{ "updates/changelog"  | relative_url }}">Software changelog</a></li>
+    <li><a href="{{ "updates/changelog-firmware"  | relative_url }}">Firmware changelog</a></li>
+
   </ul>
 
   <li class="sidebar-title">Q API</li>
