--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,30 +3,26 @@
     <div class="row">
       <div class="col-md-12">
         <i class="fa fa-bars" id="sidebar-toggle-button" aria-hidden="true" style="display:none"></i>
-        <img src="{{ "images/icon.png"  | relative_url }}" alt="Das Keyboard Logo" width="24" height="32" style="vertical-align:middle">
+        <img src="{{ 'images/icon.png'  | relative_url }}" alt="Das Keyboard Logo" width="24" height="32" style="vertical-align:middle">
 
-        <a class="site-title" href="{{ "/"  | relative_url }}">{{ site.title }}</a>
+        <a class="site-title" href="{{ '/'  | relative_url }}">{{ site.title }}</a>
 
         <nav class="site-nav">
           <a href="#" class="menu-icon">
             <i class="material-icons-extended">more_vert</i>
           </a>
+
+
           <div class="trigger">
+            <a class="btn btn-sm btn-outline-primary" href="{{ 'q-api-quick-start/'  | relative_url }}">Develop</a>
+            <a class="btn btn-sm btn-outline-success" href="http://qforum.daskeyboard.com">Discuss</a>
+            <a class="btn btn-sm btn-outline-warning" href="{{ 'get-started/'  | relative_url }}">Getting Started</a>
+            <a class="btn btn-sm btn-outline-danger" href="{{ 'get-started/download/'  | relative_url }}">Download</a>
             <span id="header-welcome-message"></span>
-            <a class="page-link" href="{{ "q-api-quick-start"  | relative_url }}">Docs</a>
-            <a class="page-link" href="https://github.com/DasKeyboard/Daskeyboard.io">GitHub</a>
-            <a class="page-link" href="https://daskeyboard.mojohelpdesk.com/">Support</a>
             &nbsp;
-            <a class="btn btn-outline-primary" 
-            style="display: none;"
-            id="logout-action"
-            href="#" 
-            onclick="logout()">logout</a>
-            <a class="btn btn-outline-primary" 
-              style="display: none;"
-              href="#"
-              onclick="onLoginToQCloud()"
-              id="header-login-message">login for more features</a>
+            <a class="btn btn-outline-primary" style="display: none;" id="logout-action" href="#" onclick="logout()">logout</a>
+            <a href="#" style="font-weight: bolder; display: none;" onclick="onLoginToQCloud()" id="header-login-message">login for more
+              features</a>
           </div>
         </nav>
       </div>
