--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,29 +2,35 @@
 
   <li class="sidebar-title">Get started</li>
   <ul class="sidebar-items">
-    <li><a href="{{ "get-started/download/"  | relative_url }}">1: Download</a></li>
-    <li><a href="{{ "get-started/welcome-video/"  | relative_url }}">2: Watch Welcome video</a></li>
-    <li><a href="{{ "get-started/creating-and-switching-profiles-tutorial/"  | relative_url }}">3: Watch profile settings video</a></li>
-    <li><a href="{{ "get-started/ifttt-tutorial/"  | relative_url }}">4: Watch IFTTT tutorial</a></li>
-    <li><a href="{{ "get-started/zapier-tutorial/"  | relative_url }}">5: Watch Zapier tutorial</a></li>
-    <li><a href="{{ "get-started/q-command-center/"  | relative_url }}">6: Control IOT with Q Command Center</a></li>
+    <li><a href="{{ 'get-started/download/'  | relative_url }}">1: Download</a></li>
+    <li><a href="{{ 'get-started/welcome-video/'  | relative_url }}">2: Watch Welcome video</a></li>
+    <li><a href="{{ 'get-started/creating-and-switching-profiles-tutorial/'  | relative_url }}">3: Watch profile
+        settings video</a></li>
+    <li><a href="{{ 'get-started/ifttt-tutorial/'  | relative_url }}">4: Watch IFTTT tutorial</a></li>
+    <li><a href="{{ 'get-started/zapier-tutorial/'  | relative_url }}">5: Watch Zapier tutorial</a></li>
+    <li><a href="{{ 'get-started/q-command-center/'  | relative_url }}">6: Control IOT with Q Command Center</a></li>
 
+  </ul>
+
+  <li class="sidebar-title">Q Applets</li>
+  <ul class="sidebar-items">
+    <li><a href="{{ 'applet-development/'  | relative_url }}">Applets developers documentation</a></li>
   </ul>
 
   <li class="sidebar-title">Q Developer API</li>
   <ul class="sidebar-items">
-    <li><a href="{{ "q-api-quick-start/"  | relative_url }}">Quick start</a></li>
-    <li><a href="{{ "q-cloud-or-local"  | relative_url }}">Q Cloud or Localhost</a></li>
-    <li><a href="{{ "contributed-links/"  | relative_url }}">Community contributions</a></li>
-    <li><a href="{{ "script-examples/"  | relative_url }}">API examples &nbsp;<i class="fa fa-star text-primary"></i></a></li>
-    <li><a href="{{ "q-zone-id-explanation"  | relative_url }}">Understand zoneId&nbsp;</a></li>
+    <li><a href="{{ 'q-api-quick-start/'  | relative_url }}">Quick start</a></li>
+    <li><a href="{{ 'q-cloud-or-local'  | relative_url }}">Q Cloud or Localhost</a></li>
+    <li><a href="{{ 'contributed-links/'  | relative_url }}">Community contributions</a></li>
+    <li><a href="{{ 'script-examples/'  | relative_url }}">API examples &nbsp;<i class="fa fa-star text-primary"></i></a></li>
+    <li><a href="{{ 'q-zone-id-explanation'  | relative_url }}">Understand zoneId&nbsp;</a></li>
     <li><a href="https://qforum.daskeyboard.com">Developer forum</a></li>
   </ul>
 
   <li class="sidebar-title">Q software updates</li>
   <ul class="sidebar-items">
-    <li><a href="{{ "updates/changelog"  | relative_url }}">Software changelog</a></li>
-    <li><a href="{{ "updates/changelog-firmware"  | relative_url }}">Firmware changelog</a></li>
+    <li><a href="{{ 'updates/changelog'  | relative_url }}">Software changelog</a></li>
+    <li><a href="{{ 'updates/changelog-firmware'  | relative_url }}">Firmware changelog</a></li>
 
   </ul>
 
@@ -59,46 +65,46 @@
 
   <ul class="sidebar-items">
     <li>
-         <span class="resource-name">Signals</span>
+      <span class="resource-name">Signals</span>
       <ul>
         <li>
-          <a href="{{ "api-resources/signal/resource-description" | relative_url }}">signal resource</a>
+          <a href="{{ 'api-resources/signal/resource-description" | relative_url }}">signal resource</a>
           <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/create-signal" | relative_url }}">create signal</a>
+          <a href="{{ 'api-resources/signal/create-signal" | relative_url }}">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/delete-signal" | relative_url }}">delete signal by id</a>
+          <a href="{{ 'api-resources/signal/delete-signal" | relative_url }}">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
+          <a href="{{ 'api-resources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
+          <a href="{{ 'api-resources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
+          <a href="{{ 'api-resources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
+          <a href="{{ 'api-resources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
+          <a href="{{ 'api-resources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ "api-resources/signal/get-signals" | relative_url }}">get signals</a>
+          <a href="{{ 'api-resources/signal/get-signals" | relative_url }}">get signals</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
       </ul>
     </li>
   </ul>
-  
+
 </ul>
