--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,13 @@
   <ul class="sidebar-items">
     <li><a href="{{ 'get-started/download/'  | relative_url }}">1: Download</a></li>
     <li><a href="{{ 'get-started/welcome-video/'  | relative_url }}">2: Watch Welcome video</a></li>
-    <li><a href="{{ 'get-started/creating-and-switching-profiles-tutorial/'  | relative_url }}">3: Watch profile
+    <li><a href="{{ 'get-started/creating-and-switching-profiles-tutorial/'  | relative_url }}">3:
+        Watch profile
         settings video</a></li>
     <li><a href="{{ 'get-started/ifttt-tutorial/'  | relative_url }}">4: Watch IFTTT tutorial</a></li>
     <li><a href="{{ 'get-started/zapier-tutorial/'  | relative_url }}">5: Watch Zapier tutorial</a></li>
-    <li><a href="{{ 'get-started/q-command-center/'  | relative_url }}">6: Control IOT with Q Command Center</a></li>
+    <li><a href="{{ 'get-started/q-command-center/'  | relative_url }}">6: Control IOT with Q
+        Command Center</a></li>
 
   </ul>
 
@@ -68,39 +70,45 @@
       <span class="resource-name">Signals</span>
       <ul>
         <li>
-          <a href="{{ 'api-resources/signal/resource-description" | relative_url }}">signal resource</a>
+          <a href="{{ 'api-resources/signal/resource-description' | relative_url }}">signal
+            resource</a>
           <span class="badge badge-warning pull-right">RES</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/create-signal" | relative_url }}">create signal</a>
+          <a href="{{ 'api-resources/signal/create-signal' | relative_url }}">create signal</a>
           <span class="badge badge-success pull-right">POST</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/delete-signal" | relative_url }}">delete signal by id</a>
+          <a href="{{ 'api-resources/signal/delete-signal' | relative_url }}">delete signal by id</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/get-shadow-signals-for-device" | relative_url }}">get shadows for pid</a>
+          <a href="{{ 'api-resources/signal/get-shadow-signals-for-device' | relative_url }}">get
+            shadows for pid</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/get-all-shadow-signals" | relative_url }}">get all shadows</a>
+          <a href="{{ 'api-resources/signal/get-all-shadow-signals' | relative_url }}">get all
+            shadows</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/get-signal-by-zone-id" | relative_url }}">get signal by zoneId</a>
+          <a href="{{ 'api-resources/signal/get-signal-by-zone-id' | relative_url }}">get signal by
+            zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/get-signal-color-by-zone-id" | relative_url }}">get signal color by zoneId</a>
+          <a href="{{ 'api-resources/signal/get-signal-color-by-zone-id' | relative_url }}">get
+            signal color by zoneId</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/delete-signal-by-zone-id" | relative_url }}">delete signal by zoneId</a>
+          <a href="{{ 'api-resources/signal/delete-signal-by-zone-id' | relative_url }}">delete
+            signal by zoneId</a>
           <span class="badge badge-danger pull-right">DELETE</span>
         </li>
         <li>
-          <a href="{{ 'api-resources/signal/get-signals" | relative_url }}">get signals</a>
+          <a href="{{ 'api-resources/signal/get-signals' | relative_url }}">get signals</a>
           <span class="badge badge-primary pull-right">GET</span>
         </li>
       </ul>
