--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,9 @@
           <img src="{{ "images/icon.png"  | relative_url }}" alt="Das Keyboard Logo" width="70" height="90">
         </div>
           <p class="site-footer__link-list">
-            <a href="https://www.daskeyboard.com">www.daskeyboard.com</a> &bull;
+            <a href="https://www.daskeyboard.com/">www.daskeyboard.com</a> &bull;
             <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
-            <a href="https://github.com/metadot">Github</a> &bull;
-            <a href="https://qforum.daskeyboard.com/">Forum</a>
+            <a href="https://github.com/daskeyboard">Github</a>
           </p>
 
           <p class="licenses">
