--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,9 @@
             <a class="btn btn-sm btn-outline-danger" href="{{ 'get-started/download/'  | relative_url }}">Download</a>
             <span id="header-welcome-message"></span>
             &nbsp;
-            <a class="btn btn-outline-primary" style="display: none;" id="logout-action" href="#" onclick="logout()">logout</a>
-            <a href="#" style="font-weight: bolder; display: none;" onclick="onLoginToQCloud()" id="header-login-message">login for more
+            <a class="btn btn-sm btn-outline-primary" style="display: none;" id="logout-action" href="#" onclick="logout()">logout</a>
+            <a href="#" style="font-weight: bolder; display: none;" onclick="onLoginToQCloud()" id="header-login-message">login
+              for more
               features</a>
           </div>
         </nav>
