--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -114,5 +114,12 @@
       </ul>
     </li>
   </ul>
+  <ul class="sidebar-items">
+    <li>
+      <span class="resource-name">Links</span>
+      <ul>
+        <li>
+          <a href="https://github.com/daskeyboard">Github Das Keyboard</a>
+        </li>
 
 </ul>
