--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <a class="btn btn-sm btn-outline-primary" href="{{ 'q-api-quick-start/'  | relative_url }}">Develop</a>
             <a class="btn btn-sm btn-outline-success" href="http://qforum.daskeyboard.com">Discuss</a>
             <a class="btn btn-sm btn-outline-warning" href="{{ 'get-started/'  | relative_url }}">Getting Started</a>
-            <a class="btn btn-sm btn-outline-danger" href="{{ 'get-started/download/'  | relative_url }}">Download</a>
+            <a class="btn btn-sm btn-outline-danger" href="{{ 'get-started/software/'  | relative_url }}">Download</a>
             <span id="header-welcome-message"></span>
             &nbsp;
             <a class="btn btn-sm btn-outline-primary" style="display: none;" id="logout-action" href="#" onclick="logout()">logout</a>
