--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,16 +2,15 @@
 
   <li class="sidebar-title">Get started</li>
   <ul class="sidebar-items">
-    <li><a href="{{ 'get-started/download/'  | relative_url }}">1: Download</a></li>
+    <li><a href="{{ 'get-started/software/'  | relative_url }}">1: Download</a></li>
     <li><a href="{{ 'get-started/welcome-video/'  | relative_url }}">2: Watch Welcome video</a></li>
-    <li><a href="{{ 'get-started/creating-and-switching-profiles-tutorial/'  | relative_url }}">3:
+    <li><a href="{{ 'get-started/marketplace-tutorial/'  | relative_url }}">3: Watch Marketplace video</a></li>
+
+    <li><a href="{{ 'get-started/creating-and-switching-profiles-tutorial/'  | relative_url }}">4:
         Watch profile
         settings video</a></li>
-    <li><a href="{{ 'get-started/ifttt-tutorial/'  | relative_url }}">4: Watch IFTTT tutorial</a></li>
-    <li><a href="{{ 'get-started/zapier-tutorial/'  | relative_url }}">5: Watch Zapier tutorial</a></li>
-    <li><a href="{{ 'get-started/q-command-center/'  | relative_url }}">6: Control IOT with Q
-        Command Center</a></li>
-
+    <li><a href="{{ 'get-started/ifttt-tutorial/'  | relative_url }}">5: Watch IFTTT tutorial</a></li>
+    <li><a href="{{ 'get-started/zapier-tutorial/'  | relative_url }}">6: Watch Zapier tutorial</a></li>
   </ul>
 
   <li class="sidebar-title">Q Applets</li>
@@ -122,4 +121,4 @@
           <a href="https://github.com/daskeyboard">Github Das Keyboard</a>
         </li>
 
-</ul>
+      </ul>
