Changed 'develop' link to applet development page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@
 
 
           <div class="trigger">
-            <a class="btn btn-sm btn-outline-primary" href="{{ 'q-api-quick-start/'  | relative_url }}">Develop</a>
-            <a class="btn btn-sm btn-outline-success" href="http://qforum.daskeyboard.com">Discuss</a>
+            <a class="btn btn-sm btn-outline-primary" href="{{ 'applet-development/'  | relative_url }}">Develop</a>
+            <a class="btn btn-sm btn-outline-success" href="https://qforum.daskeyboard.com">Discuss</a>
             <a class="btn btn-sm btn-outline-warning" href="{{ 'get-started/'  | relative_url }}">Getting Started</a>
             <a class="btn btn-sm btn-outline-danger" href="{{ 'get-started/software/'  | relative_url }}">Download</a>
             <span id="header-welcome-message"></span>
