WIP. Applet dev doc revamp. More to come.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,8 @@
 
   <li class="sidebar-title">Q Applets</li>
   <ul class="sidebar-items">
-    <li><a href="{{ 'applet-development/'  | relative_url }}">Applets developers documentation</a></li>
+    <li><a href="{{ 'applet-development/'  | relative_url }}">Development overview</a></li>
+    <li><a href="{{ 'applet-development/packaging-publishing'  | relative_url }}">Packaging & publishing</a></li>
   </ul>
 
   <li class="sidebar-title">Q Developer API</li>
