--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,9 @@ $content-width:    980px;
 $on-palm:          640px;
 $on-laptop:        980px;
 
+h2 {
+    margin-top: 0.5rem;
+}
 
 small, .small{
     text-transform: initial;
