--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,8 +9,8 @@ html, body {
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
+    xmargin: 0;
+    xpadding: 0;
 }
 
 
