WIP Dev doc for 3.1.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,8 @@
   <li class="sidebar-title">Q Applets</li>
   <ul class="sidebar-items">
     <li><a href="{{ 'applet-development/'  | relative_url }}">Development overview</a></li>
+    <li><a href="{{ 'applet-development/user-questions'  | relative_url }}">Form fields: questions</a></li>
+    <li><a href="{{ 'applet-development/logging'  | relative_url }}">Logging & debugging</a></li>
     <li><a href="{{ 'applet-development/packaging-publishing'  | relative_url }}">Packaging & publishing</a></li>
   </ul>
 
