--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
   <ul class="sidebar-items">
     <li><a href="{{ 'applet-development/'  | relative_url }}">Development overview</a></li>
     <li><a href="{{ 'applet-development/user-questions'  | relative_url }}">Form fields: questions</a></li>
-    <li><a href="{{ 'applet-development/logging'  | relative_url }}">Logging & debugging</a></li>
+    <li><a href="{{ 'applet-development/logging'  | relative_url }}">Command line & logging</a></li>
     <li><a href="{{ 'applet-development/authentication'  | relative_url }}">Applet authentication</a></li>
     <li><a href="{{ 'applet-development/packaging-publishing'  | relative_url }}">Packaging & publishing</a></li>
   </ul>
