Added doc for Q applet signal creation.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,7 @@
   <li class="sidebar-title">Q Applets</li>
   <ul class="sidebar-items">
     <li><a href="{{ 'applet-development/'  | relative_url }}">Development overview</a></li>
+    <li><a href="{{ 'applet-development/signals/'  | relative_url }}">Creating signals</a></li>
     <li><a href="{{ 'applet-development/user-questions/'  | relative_url }}">Form fields: questions</a></li>
     <li><a href="{{ 'applet-development/logging/'  | relative_url }}">Command line & logging</a></li>
     <li><a href="{{ 'applet-development/authentication/'  | relative_url }}">Applet authentication</a></li>
