added anchor when no platform is detected to go to all downloads section in software page

--- a/css/main.scss
+++ b/css/main.scss
@@ -97,3 +97,7 @@ aside > :not(pre) > code[class*="language-"], aside > pre[class*="language-"] {
     }
 }
 
+#all-downloads:before {
+    content: none;
+}
+
